fix body overflow

--- a/src/styles/sidebar.overrides.css
+++ b/src/styles/sidebar.overrides.css
@@ -1,3 +1,7 @@
+.p-sidebar {
+  border: none;
+}
+
 .p-sidebar-content {
   margin-top: 30px;
   display: flex;
